1. Update for Forge 1277 2. Prepere for X-Pack 1.7.10_4 3. Update to Java 8_25 4. Fix exception with direct references