@@ -32,17 +32,7 @@ public class jvmArgs {
             Tokenizer = new StringTokenizer(xmsBefore, "G");
             int xms = Integer.parseInt(Tokenizer.nextToken());
 
-            Tokenizer = new StringTokenizer(arguments[3], "-XX:MaxPermSize=");
-            String xxmaxBefore = Tokenizer.nextToken();
-            Tokenizer = new StringTokenizer(xxmaxBefore, "m");
-            int xxmax = Integer.parseInt(Tokenizer.nextToken());
-
-            Tokenizer = new StringTokenizer(arguments[4], "-XX:PermSize=");
-            String xxBefore = Tokenizer.nextToken();
-            Tokenizer = new StringTokenizer(xxBefore, "m");
-            int xx = Integer.parseInt(Tokenizer.nextToken());
-
-            if (xmx < 2 || xms < 1 || xxmax < 2048 || xx < 1024 ) {
+            if (xmx < 2 || xms < 1 ) {
                 guiFrame.displayError("Nie u\u017cywasz zalecanych argument\u00f3w JVM lub ich sk\u0142adnia jest niepoprawna. Zalecamy skopiowa\u0107 JVM Arguments ze strony xpack.pl/repo/instrukcja.html.", "B\u0142\u0105d argument\u00f3w");
             } else if(!Arrays.asList(arguments).contains("-Dfml.ignoreInvalidMinecraftCertificates=true")) {
                 guiFrame.displayError("Nie u\u017cywasz zalecanych argument\u00f3w JVM lub ich sk\u0142adnia jest niepoprawna. Zalecamy skopiowa\u0107 JVM Arguments ze strony xpack.pl/repo/instrukcja.html.", "B\u0142\u0105d argument\u00f3w");
